# ShakesBot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: Expedision.rs  arena.rs  dungeon.rs  equiping_best_item.rs  functions.rs  main.rs  quest.rs
