[package]
name = "Shakes2"
version = "0.1.0"
edition = "2021"

[dependencies]
sf-api = { git = "https://github.com/the-marenga/sf-api", rev = "79607d2" }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4"          # Version 0.4 is stable, but you can check for the latest version
enum-map = "2.7.3"
fastrand = "2.2.0"
dotenv = "0.15"# Latest version at this time
rpassword = "7.3.1"
env_logger = "0.11.5"
log = "0.4.22"
fern = "0.7.0"
